# Full-learning-record

./: .gitignore  README.en.md  README.md
awktest/: Chinese.txt  English.txt  awk.md  converge_caption.awk  genConten.awk  genConten.sh  zh.txt
awktest/converge/: Cargo.toml
cpp/: .tutor.md.swp  C++DLLIntoLabview.md  CMakeLists.txt  cmake.md  cpp_tutor.md  install_cuda.md  newcpp.sh  test.html  tutor.md
cpp/project/libtorch_test/: CMakeLists.txt
cpp/project/libtorch_test/include/: Timer.hpp  csv_net.hpp  csvdataset.hpp  mnist_net.hpp
cpp/project/libtorch_test/src/: Timer.cpp  csv_net.cpp  csv_train.cpp  csvdataset.cpp  main.cpp  mnist_net.cpp  mnist_test.cpp  mnist_train.cpp
cpp/project/loadDll/: CMakeLists.txt  main.cpp  run.bat
cpp/project/loadDll/inc/: header.h  my_load_dll_header.h
cpp/project/loadDll/src/: clibtest.cpp
cpp/project/start/datastructure/: CMakeLists.txt  run.bat
cpp/project/start/datastructure/include/: Timer.h
cpp/project/start/datastructure/src/: Timer.cpp  list.cpp  main.cpp  matrix.cpp  queue.cpp
deeplearning/: graph-network.md  nx_test.py  ppt.md
deeplearning/linear-regression/: Cargo.toml
docker/: ap_proxy.sh  compose.yml  docker.md  dockerPull.sh  rm_proxy.sh  setpu.sh
docker_compose/: docker-compose.yml  redis.conf  tutor.md
english/: chunks.md
file_manager/: config_yazi.sh  package.toml  yazi.md  yazi.toml
file_manager/yazi_config/: init.lua
front_end/: html_css.md  js.md  vue_tutor.md
gitRoad/: gitTutuor.md
java/: tutor.md
lf/: config.sh
lua/: a.lua  b.lua  tutor.md
markdown/: res.md
mysql/: tutor.md
mysql_redis/: docker-compose.yml
pandas-learn/: pandas_tutor.md
project/: cost_project.md
python/GNN/: main.py  netx.py  tutor.md
python/PINN/: diffusion_reaction.py  ode_simple.py  poisson_eq.py  test_torch.py  top_cover.py  top_cover_predict.py  top_gpt.py  (+1 more)
redis/: redis.md
rust/: cargo.md  new_rust_tutor.md  rust_mysql.md  rust_tutor.md  rust_tutor_new_version.md  tauri.md
rust/projects/backend/MysqlConnector/: Cargo.toml
rust/projects/backend/MysqlConnector/src/: InitDB.rs  lib.rs
rust/projects/backend/Simulator/: Cargo.toml
rust/projects/backend/auto_reagent/: Cargo.toml  Dockerfile
rust/projects/backend/auto_reagent/src/: AppState.rs  handlers.rs  lib.rs  models.rs  routers.rs  state.rs
rust/projects/backend/auto_reagent/src/handlers/: Login.rs  MachineButton.rs  Query.rs  Verify.rs  history_data.rs  login.rs  machine_panel.rs  mod.rs  monitor.rs  verify_token.rs
rust/projects/backend/auto_reagent/src/handlers/entities/: date_time_range.rs  mod.rs
rust/projects/backend/auto_reagent/src/mapper/: mod.rs  redis.rs  sql.rs
rust/projects/backend/auto_reagent/src/middleware/: mod.rs  myws.rs  redis_data.rs
rust/projects/backend/auto_reagent/src/models/: LoginInfo.rs  TempRecord.rs  TurbineState.rs  mod.rs  query_data.rs  record.rs  redis_data.rs  sqlx_manager.rs  token.rs  user.rs
rust/projects/backend/auto_reagent/src/utility/: time.rs
rust/projects/backend/auto_reagent/src/websocket/: mod.rs  myws.rs
rust/projects/backend/opcua_client/: Cargo.toml
rust/projects/backend/opcua_client/src/: lib.rs
rust/projects/backend/opcua_client/src/Example/: auto_reagent.rs  mod.rs  subscribe.rs
rust/projects/backend/opcua_client/src/Models/: MonitoredItemConfig.rs  Temperature.rs  mod.rs
rust/projects/backend/opcua_client/src/ToRedis/: Models.rs  MonitoredItemConfig.rs  mod.rs
rust/projects/backend/opcua_client/src/entity/: temperature.rs
rust/projects/backend/opcua_client/src/opcua_config/: Operation.rs  config.yml  dataType.rs  data_collector.rs  mod.rs  node_config.rs  opcua_session_wrapper.rs
rust/projects/backend/opcua_client/src/opcua_config/data_adaptor/: collector.rs  mod.rs  transferee.rs
rust/projects/backend/opcua_client/src/opcua_config/data_adaptor/interface/: collect.rs  transfer.rs
rust/projects/backend/opcua_client/src/opcua_config/data_adaptor/unit/: DataTime.rs  Instruction.rs
rust/projects/backend/opcua_client/src/opcua_config/node_config/: NodeConfig.rs
rust/projects/backend/opcua_client/src/store/: MysqlData.rs  RedisData.rs  app.rs  middleware.rs  mod.rs  opcuaSession.rs
rust/projects/backend/opcua_client/src/utility/: time.rs
shell_linux/: awk.md  cmd.md  docker-compose.yml  dockerInstall.sh  install_tutor.md  iptables.md  mihomo.md  setProxy.md  shell.md  tool.md  v2ray.md  zsh.md
textbook/: ae.md  algebra.md  blender.md  designp.md  labview.md  matlab.md  mermaid.md  mineral_processing.md  plc.md  pr.md  ps.md  shell.md  tool.md  v2ray-linux.md  v2ray.md  word.md
vim-config/: .vimrc  init.lua  nvim_config.sh  test  vim_config.sh  vimtutor
(+37 files in other folders)
