[package]
name = "MysqlConnector"
version = "0.1.0"
edition = "2021"
default-run = "testConn"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
mysql = { version = "25.0.0", features = ["chrono"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-native-tls","chrono"] }

[[bin]]
name="testConn"