[package]
name = "AutoReagent"
version = "0.1.0"
edition = "2021"
default-run = "test"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
actix-cors = "0.6.5"
serde = { version = "1.0.188", features = ["derive"]}
chrono = { version = "0.4.31", features = ["serde"]}
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
actix-session = { version = "=0.9.0", features = ["cookie-session"] }
mysql = { version = "25.0.0", features = ["chrono"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-native-tls","chrono"] }

[[bin]]
name = "test"

