[package]
name = "client_test"
version = "0.1.0"
edition = "2021"
default-run="test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opcua = "0.12.0"
AutoReagent = { version="0.1.0",path="../auto_reagent" }
redis = { version = "0.25.4", features = ["tokio-comp"] }
tokio = { version = "1.38.0", features = ["full"] }